[main]: correct extra horizontal scrolling

--- a/main.css
+++ b/main.css
@@ -3,8 +3,8 @@
 width: auto;}
 
 .slider {
-  width: 100vw;
-  height: 100%;
+  width: 100%;
+  height: 99%;
   background-size: cover;
   background-repeat: no-repeat;
   background-position-y: bottom;
